test/goodgadget/goodgadget-raw.out

CIDR           IP Block            b16           NHI                 
--             0.0.0.0/26          0x00000000    
0              0.0.0.24/29         0x00000018    0
0/0            0.0.0.24/30         0x00000018    
1              0.0.0.16/29         0x00000010    1
1/0            0.0.0.16/30         0x00000010    
2              0.0.0.8/29          0x00000008    2
2/0            0.0.0.8/30          0x00000008    
3              0.0.0.0/29          0x00000000    3
3/0            0.0.0.0/30          0x00000000    
4              0.0.0.52/30         0x00000034    0:1(1) 1:1(1) 
5              0.0.0.48/30         0x00000030    0:1(2) 2:1(1) 
6              0.0.0.44/30         0x0000002c    0:1(3) 3:1(1) 
7              0.0.0.40/30         0x00000028    1:1(2) 2:1(2) 
8              0.0.0.36/30         0x00000024    1:1(3) 3:1(2) 
9              0.0.0.32/30         0x00000020    2:1(3) 3:1(3) 

NHI Addr            CIDR Level          IP Address Block    % util    
--                  --                  0.0.0.0/26          90.625    
0                   0                   0.0.0.24/29         75.0      
1                   1                   0.0.0.16/29         75.0      
2                   2                   0.0.0.8/29          75.0      
3                   3                   0.0.0.0/29          75.0      

** 		 Using specified 1.0ns clock resolution


--- Phase I: construct table of routers and hosts


--- Phase II: connect Point-To-Point links


--- Phase III: add static routes
## Net config: 4 routers and hosts
## Elapsed time: 0.599 seconds
** Running for 200000000000 clock ticks (== 200.0 seconds sim time)
----------------------------------------------------------------------
|	Raceway SSF 1.0b09 (2 May 2001)
|	 Proprietary Internal Development Release
|	(c)2000,2001 Renesys Corporation
----------------------------------------------------------------------

~# 01
~# 02 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~# 03 GOODGADGET Validation Test
~# 04 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~# 05
----------------------------------------------------------------------
| 1 timelines, 5 barriers, 2229 events, 881 ms, 4 Kevt/s
----------------------------------------------------------------------
...........................................................................
...........................   bgp@0:1 wrap-up   ...........................
...........................................................................
~# 0:1   --- Loc-RIB at bgp@0:1:
~# 0:1  |      NetworkNHI         NextHopNHI       Metric LocPrf Weight ASPathNHI
~# 0:1  | *>   3                  3:1(1)                -      -      - 3        
~# 0:1  | *>   2                  2:1(1)                -      -      - 2        
~# 0:1  | *>   1                  1:1(1)                -      -      - 1        
~# 0:1  | *>   0                  self                  -      -      -           i

...........................................................................
...........................   bgp@1:1 wrap-up   ...........................
...........................................................................
~# 1:1   --- Loc-RIB at bgp@1:1:
~# 1:1  |      NetworkNHI         NextHopNHI       Metric LocPrf Weight ASPathNHI
~# 1:1  | *>   3                  2:1(2)                -    100      - 2 3      
~# 1:1  | *>   2                  2:1(2)                -    100      - 2        
~# 1:1  | *>   1                  self                  -      -      -           i
~# 1:1  | *>   0                  2:1(2)                -    100      - 2 3 0    

...........................................................................
...........................   bgp@2:1 wrap-up   ...........................
...........................................................................
~# 2:1   --- Loc-RIB at bgp@2:1:
~# 2:1  |      NetworkNHI         NextHopNHI       Metric LocPrf Weight ASPathNHI
~# 2:1  | *>   3                  3:1(3)                -    100      - 3        
~# 2:1  | *>   2                  self                  -      -      -           i
~# 2:1  | *>   1                  3:1(3)                -    100      - 3 1      
~# 2:1  | *>   0                  3:1(3)                -    100      - 3 0      

...........................................................................
...........................   bgp@3:1 wrap-up   ...........................
...........................................................................
~# 3:1   --- Loc-RIB at bgp@3:1:
~# 3:1  |      NetworkNHI         NextHopNHI       Metric LocPrf Weight ASPathNHI
~# 3:1  | *>   3                  self                  -      -      -           i
~# 3:1  | *>   2                  2:1(3)                -      -      - 2        
~# 3:1  | *>   1                  1:1(3)                -      -      - 1        
~# 3:1  | *>   0                  0:1(3)                -      -      - 0        

